--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,5 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 max_line_length = 160
 
-[*.{c,hpp,inl}]
+[*.{c,h,cpp,hpp,inl}]
 charset = latin1
